[package]
name = "cvrp-genetic"
version = "0.1.0"
authors = ["Krystian Chmura <Krystian.Chmura@gmail.com>"]
edition = "2018"

[dependencies]
clap = "~2.27.0"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
nalgebra = "0.16.12"
rand = "0.6"
indicatif = "0.11.0"
lazysort = "0.2.1"
rayon = "1.0.3"
pdqselect = "0.1.0"

[profile.release]
debug = true